New Test Development
- api, pap (except consolidated HC), apex and acm runtime passing
on both docker and helm environment
- other simulators exposed on simulator service
- topics are checked on test with robot http support
- apex temp engine port exposed
- xacml readiness added

Issue-ID: POLICY-4125
Change-Id: I39ee8c38e70dd3a4ad26ba69d7c62e61a211469e
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>

--- a/helm/policy/components/policy-apex-pdp/templates/service.yaml
+++ b/helm/policy/components/policy-apex-pdp/templates/service.yaml
@@ -40,6 +40,11 @@ spec:
       targetPort: {{ .Values.service.internalPort }}
       name: {{ .Values.service.portName }}
     {{- end}}
+    {{if .Values.jerseyServer.enabled}}
+    - port: {{ .Values.jerseyServer.externalPort }}
+      targetPort: {{ .Values.jerseyServer.internalPort }}
+      name: {{ .Values.jerseyServer.portName }}
+    {{end}}
   selector:
     app: {{ .Chart.Name }}
     release: RELEASE
