--- a/helm/policy/components/policy-pap/templates/configmap.yaml
+++ b/helm/policy/components/policy-pap/templates/configmap.yaml
@@ -35,4 +35,4 @@ binaryData:
 {{- end }}
 {{- end }}
 data:
-{{ tpl (.Files.Glob "resources/config/*.{yaml,xml}").AsConfig . | indent 2 }}
+{{ tpl (.Files.Glob "resources/config/*.{yaml,json,xml}").AsConfig . | indent 2 }}
