--- a/compose/config/apex-pdp/OnapPfConfig.json
+++ b/compose/config/apex-pdp/OnapPfConfig.json
@@ -1,41 +1,49 @@
 {
-    "name":"OnapPfParameterGroup",
-     "restServerParameters": {
-        "host": "0.0.0.0",
-        "port": 6969,
-        "userName": "policyadmin",
-        "password": "zb!XztG34",
-        "https": false,
-        "prometheus": true
-    },
-    "pdpStatusParameters":{
-        "pdpGroup": "defaultGroup",
-        "timeIntervalMs": 120000,
-        "pdpType":"apex",
-        "description":"Pdp Heartbeat",
-        "supportedPolicyTypes": [
-            {
-              "name": "onap.policies.controlloop.operational.common.Apex",
-              "version": "1.0.0"
-            },
-            {
-                "name": "onap.policies.native.Apex",
-                "version": "1.0.0"
-            }
-        ]
-    },
-    "topicParameterGroup": {
-        "topicSources" : [{
-            "topic" : "POLICY-PDP-PAP",
-            "servers" : [ "message-router" ],
-            "topicCommInfrastructure" : "dmaap",
-            "useHttps" : false
-        }],
-        "topicSinks" : [{
-            "topic" : "POLICY-PDP-PAP",
-            "servers" : [ "message-router" ],
-            "topicCommInfrastructure" : "dmaap",
-            "useHttps" : false
-        }]
-    }
+  "name": "OnapPfParameterGroup",
+  "restServerParameters": {
+    "host": "0.0.0.0",
+    "port": 6969,
+    "userName": "policyadmin",
+    "password": "zb!XztG34",
+    "https": false,
+    "prometheus": true
+  },
+  "pdpStatusParameters": {
+    "pdpGroup": "defaultGroup",
+    "timeIntervalMs": 120000,
+    "pdpType": "apex",
+    "description": "Pdp Heartbeat",
+    "supportedPolicyTypes": [
+      {
+        "name": "onap.policies.controlloop.operational.common.Apex",
+        "version": "1.0.0"
+      },
+      {
+        "name": "onap.policies.native.Apex",
+        "version": "1.0.0"
+      }
+    ]
+  },
+  "topicParameterGroup": {
+    "topicSources": [
+      {
+        "topic": "POLICY-PDP-PAP",
+        "servers": [
+          "message-router"
+        ],
+        "topicCommInfrastructure": "dmaap",
+        "useHttps": false
+      }
+    ],
+    "topicSinks": [
+      {
+        "topic": "POLICY-PDP-PAP",
+        "servers": [
+          "message-router"
+        ],
+        "topicCommInfrastructure": "dmaap",
+        "useHttps": false
+      }
+    ]
+  }
 }
