--- a/helm/policy/components/policy-apex-pdp/resources/config/OnapPfConfig.json
+++ b/helm/policy/components/policy-apex-pdp/resources/config/OnapPfConfig.json
@@ -1,42 +1,49 @@
 {
-    "name":"OnapPfParameterGroup",
-    "restServerParameters": {
-      "host": "0.0.0.0",
-      "port": 6969,
-      "userName": "${RESTSERVER_USER}",
-      "password": "${RESTSERVER_PASSWORD}",
-      "https": false,
-      "prometheus": true
-    },
-    "pdpStatusParameters":{
-        "pdpGroup": "defaultGroup",
-        "timeIntervalMs": 120000,
-        "pdpType":"apex",
-        "description":"Pdp Heartbeat",
-        "supportedPolicyTypes": [
-            {
-                "name": "onap.policies.native.Apex",
-                "version": "1.0.0"
-            },
-            {
-              "name": "onap.policies.controlloop.operational.common.Apex",
-              "version": "1.0.0"
-            }
-        ]
-    },
-    "topicParameterGroup": {
-        "topicSources" : [{
-            "topic" : "POLICY-PDP-PAP",
-            "servers" : [ "message-router" ],
-            "useHttps" : false,
-            "fetchTimeout": 15000,
-            "topicCommInfrastructure" : "dmaap"
-        }],
-        "topicSinks" : [{
-            "topic" : "POLICY-PDP-PAP",
-            "servers" : [ "message-router" ],
-            "useHttps" : false,
-            "topicCommInfrastructure" : "dmaap"
-        }]
-    }
+  "name": "OnapPfParameterGroup",
+  "restServerParameters": {
+    "host": "0.0.0.0",
+    "port": 6969,
+    "userName": "${RESTSERVER_USER}",
+    "password": "${RESTSERVER_PASSWORD}",
+    "https": false,
+    "prometheus": true
+  },
+  "pdpStatusParameters": {
+    "pdpGroup": "defaultGroup",
+    "timeIntervalMs": 120000,
+    "pdpType": "apex",
+    "description": "Pdp Heartbeat",
+    "supportedPolicyTypes": [
+      {
+        "name": "onap.policies.native.Apex",
+        "version": "1.0.0"
+      },
+      {
+        "name": "onap.policies.controlloop.operational.common.Apex",
+        "version": "1.0.0"
+      }
+    ]
+  },
+  "topicParameterGroup": {
+    "topicSources": [
+      {
+        "topic": "POLICY-PDP-PAP",
+        "servers": [
+          "message-router"
+        ],
+        "useHttps": false,
+        "topicCommInfrastructure": "dmaap"
+      }
+    ],
+    "topicSinks": [
+      {
+        "topic": "POLICY-PDP-PAP",
+        "servers": [
+          "message-router"
+        ],
+        "useHttps": false,
+        "topicCommInfrastructure": "dmaap"
+      }
+    ]
+  }
 }
