--- a/helm/policy/components/policy-models-simulator/templates/service.yaml
+++ b/helm/policy/components/policy-models-simulator/templates/service.yaml
@@ -1,30 +1,100 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: message-router
+  name: {{ .Values.service.name }}
   labels:
 {{ include "policy-models-simulator.labels" . | indent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.externalPort2 }}
-      targetPort: {{ .Values.service.internalPort2 }}
-      name: {{ .Values.service.portName }}2
-    - port: {{ .Values.service.externalPort3 }}
-      targetPort: {{ .Values.service.internalPort3 }}
-      name: {{ .Values.service.portName }}3
-    - port: {{ .Values.service.externalPort4 }}
-      targetPort: {{ .Values.service.internalPort4 }}
-      name: {{ .Values.service.portName }}4
-    - port: {{ .Values.service.externalPort5 }}
-      targetPort: {{ .Values.service.internalPort5 }}
-      name: {{ .Values.service.portName }}5
-    - port: {{ .Values.service.externalPort6 }}
-      targetPort: {{ .Values.service.internalPort6 }}
-      name: {{ .Values.service.portName }}6
-    - port: {{ .Values.service.externalPort7 }}
-      targetPort: {{ .Values.service.internalPort7 }}
-      name: {{ .Values.service.portName }}7
+    - port: {{ .Values.service.externalPort }}
+      targetPort: {{ .Values.service.internalPort }}
+      name: {{ .Values.service.portName }}
+  selector:
+    app.kubernetes.io/name: {{ include "policy-models-simulator.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Values.service.simulators.aai.name }}
+  labels:
+{{ include "policy-models-simulator.labels" . | indent 4 }}
+spec:
+  ports:
+    - port: {{ .Values.service.simulators.aai.externalPort }}
+      targetPort: {{ .Values.service.simulators.aai.internalPort }}
+      name: {{ .Values.service.simulators.aai.name }}
+  selector:
+    app.kubernetes.io/name: {{ include "policy-models-simulator.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Values.service.simulators.sdnc.name }}
+  labels:
+{{ include "policy-models-simulator.labels" . | indent 4 }}
+spec:
+  ports:
+    - port: {{ .Values.service.simulators.sdnc.externalPort }}
+      targetPort: {{ .Values.service.simulators.sdnc.internalPort }}
+      name: {{ .Values.service.simulators.sdnc.name }}
+  selector:
+    app.kubernetes.io/name: {{ include "policy-models-simulator.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Values.service.simulators.so.name }}
+  labels:
+{{ include "policy-models-simulator.labels" . | indent 4 }}
+spec:
+  ports:
+    - port: {{ .Values.service.simulators.so.externalPort }}
+      targetPort: {{ .Values.service.simulators.so.internalPort }}
+      name: {{ .Values.service.simulators.so.name }}
+  selector:
+    app.kubernetes.io/name: {{ include "policy-models-simulator.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Values.service.simulators.vfc.name }}
+  labels:
+{{ include "policy-models-simulator.labels" . | indent 4 }}
+spec:
+  ports:
+    - port: {{ .Values.service.simulators.vfc.externalPort }}
+      targetPort: {{ .Values.service.simulators.vfc.internalPort }}
+      name: {{ .Values.service.simulators.vfc.name }}
+  selector:
+    app.kubernetes.io/name: {{ include "policy-models-simulator.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Values.service.simulators.grpc.name }}
+  labels:
+{{ include "policy-models-simulator.labels" . | indent 4 }}
+spec:
+  ports:
+    - port: {{ .Values.service.simulators.grpc.externalPort }}
+      targetPort: {{ .Values.service.simulators.grpc.internalPort }}
+      name: {{ .Values.service.simulators.grpc.name }}
   selector:
     app.kubernetes.io/name: {{ include "policy-models-simulator.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
