Fix drools-pdp helm charts to run csit test
Issue-ID: POLICY-4125
Change-Id: I50ad9e44081faf52744dbb6fd491980225a3a754
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>

--- a/helm/policy/components/policy-drools-pdp/templates/service.yaml
+++ b/helm/policy/components/policy-drools-pdp/templates/service.yaml
@@ -31,12 +31,12 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.internalPort }}
+    - port: {{ .Values.service.externalPort }}
       targetPort: {{ .Values.service.internalPort }}
-      name: https-6969
-    - port: {{ .Values.service.internalPort2 }}
-      targetPort: {{ .Values.service.internalPort }}
-      name: https-9696
+      name: http-6969
+    - port: {{ .Values.service.externalPort2 }}
+      targetPort: {{ .Values.service.internalPort2 }}
+      name: http-9696
   selector:
     app: {{ .Chart.Name }}
     release: release
