Add helm charts for distribution and http-ppnt in CSIT
Issue-ID: POLICY-4542
Signed-off-by: zrrmmua <ramesh.murugan.iyer@est.tech>
Change-Id: I18453af111dff7943c65c8b1113df0ded23b6f99

--- a/helm/policy/values.yaml
+++ b/helm/policy/values.yaml
@@ -49,7 +49,10 @@ policy-drools-pdp:
   enabled: true
 policy-xacml-pdp:
   enabled: true
-
+policy-distribution:
+  enabled: true
+policy-clamp-ac-http-ppnt:
+  enabled: true
 
 #################################################################
 # DB configuration defaults.
