--- a/helm/policy/Chart.yaml
+++ b/helm/policy/Chart.yaml
@@ -57,3 +57,11 @@ dependencies:
     version: ~11.x-0
     repository: 'file://components/policy-xacml-pdp'
     condition: policy-xacml-pdp.enabled
+  - name: policy-distribution
+    version: ~11.x-0
+    repository: 'file://components/policy-distribution'
+    condition: policy-distribution.enabled
+  - name: policy-clamp-ac-http-ppnt
+    version: ~11.x-0
+    repository: 'file://components/policy-clamp-ac-http-ppnt'
+    condition: policy-clamp-ac-http-ppnt.enabled
