Upgrade helm charts ACM release to 6.4.1 in CSIT
Issue-ID: POLICY-4565
Change-Id: I3118cb3c3d259b731d0c7b59994d0d933fdf9363
Signed-off-by: FrancescoFioraEst <francesco.fiora@est.tech>

--- a/helm/policy/components/policy-clamp-ac-pf-ppnt/templates/deployment.yaml
+++ b/helm/policy/components/policy-clamp-ac-pf-ppnt/templates/deployment.yaml
@@ -69,7 +69,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: {{ .Chart.Name }}-pap-secret
-              key: login
+              key: password
         - name: RESTSERVER_USER
           valueFrom:
             secretKeyRef:
@@ -79,7 +79,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: {{ .Chart.Name }}-restserver-secret
-              key: login
+              key: password
 {{- if .Values.config.useStrimziKafka }}
         - name: JAASLOGIN
           valueFrom:
