--- a/helm/policy/components/policy-clamp-ac-pf-ppnt/values.yaml
+++ b/helm/policy/components/policy-clamp-ac-pf-ppnt/values.yaml
@@ -27,7 +27,7 @@ global:
 # Application configuration defaults.
 #################################################################
 # application image
-image: nexus3.onap.org:10001/onap/policy-clamp-ac-pf-ppnt:6.3.1
+image: nexus3.onap.org:10001/onap/policy-clamp-ac-pf-ppnt:6.4-SNAPSHOT-latest
 pullPolicy: Always
 
 # flag to enable debugging - application support required
