Upgrade helm charts ACM release to 6.4.1 in CSIT
Issue-ID: POLICY-4565
Change-Id: I3118cb3c3d259b731d0c7b59994d0d933fdf9363
Signed-off-by: FrancescoFioraEst <francesco.fiora@est.tech>

--- a/helm/policy/components/policy-clamp-runtime-acm/values.yaml
+++ b/helm/policy/components/policy-clamp-runtime-acm/values.yaml
@@ -21,7 +21,7 @@
 # Application configuration defaults.
 #################################################################
 # application image
-image: nexus3.onap.org:10001/onap/policy-clamp-runtime-acm:6.4-SNAPSHOT-latest
+image: nexus3.onap.org:10001/onap/policy-clamp-runtime-acm:6.4.1
 pullPolicy: Always
 
 # flag to enable debugging - application support required
