--- a/helm/policy/components/policy-clamp-ac-k8s-ppnt/values.yaml
+++ b/helm/policy/components/policy-clamp-ac-k8s-ppnt/values.yaml
@@ -20,7 +20,7 @@
 # Application configuration defaults.
 #################################################################
 # application image
-image: onap/policy-clamp-ac-k8s-ppnt:6.4.0
+image: nexus3.onap.org:10001/onap/policy-clamp-ac-k8s-ppnt:6.4.1
 pullPolicy: Always
 
 # flag to enable debugging - application support required
