Add kserve participant in CSIT helm
This adds the helm chart for the kserve participant in CSIT helm folder.

Issue-ID: POLICY-4574
Signed-off-by: aravind.est <aravindhan.a@est.tech>
Change-Id: Id4ee4655e115cf48f3266cb06d2cbfd548114a89

--- a/helm/policy/Chart.yaml
+++ b/helm/policy/Chart.yaml
@@ -65,3 +65,7 @@ dependencies:
     version: ~11.x-0
     repository: 'file://components/policy-clamp-ac-http-ppnt'
     condition: policy-clamp-ac-http-ppnt.enabled
+  - name: policy-clamp-ac-kserve-ppnt
+    version: ~11.x-0
+    repository: 'file://components/policy-clamp-ac-kserve-ppnt'
+    condition: policy-clamp-ac-kserve-ppnt.enabled
