Add A1pms participant in CSIT helm
This adds the helm chart for the a1pms participant in CSIT helm folder.

Issue-ID: POLICY-4525
Signed-off-by: aravind.est <aravindhan.a@est.tech>
Change-Id: I2045770de5dc2b9507cd40fd3a488ee352a0acd0

--- a/helm/policy/Chart.yaml
+++ b/helm/policy/Chart.yaml
@@ -69,3 +69,7 @@ dependencies:
     version: ~11.x-0
     repository: 'file://components/policy-clamp-ac-kserve-ppnt'
     condition: policy-clamp-ac-kserve-ppnt.enabled
+  - name: policy-clamp-ac-a1pms-ppnt
+    version: ~11.x-0
+    repository: 'file://components/policy-clamp-ac-a1pms-ppnt'
+    condition: policy-clamp-ac-a1pms-ppnt.enabled
