--- a/helm/policy/values.yaml
+++ b/helm/policy/values.yaml
@@ -55,6 +55,8 @@ policy-clamp-ac-http-ppnt:
   enabled: true
 policy-clamp-ac-kserve-ppnt:
   enabled: true
+policy-clamp-ac-a1pms-ppnt:
+  enabled: true
 
 #################################################################
 # DB configuration defaults.
