Improvements to scripts and test configuration
- reduced csit image for k8s test from 1gb to 230mb
- fixed some small hindrances with start-compose.sh
- added README for how to use and configure compose script
- cleaning of Chart.lock as it fails helm install if outdated even
after running helm dependencies update

Issue-ID: POLICY-4125
Change-Id: If1711523bb836c212f27a032a46cc18d68766478
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>

--- a/compose/docker-compose.gui.yml
+++ b/compose/docker-compose.gui.yml
@@ -36,7 +36,7 @@ services:
      working_dir: /opt/app/policy/gui/bin
      command: ./policy-gui.sh
    policy-clamp-backend:
-     image: ${CONTAINER_LOCATION}onap/policy-clamp-backend:${POLICY_CLAMP_VERSION}
+     image: ${CONTAINER_LOCATION}onap/policy-clamp-backend:latest
      container_name: policy-clamp-backend
      depends_on:
       - policy-clamp-runtime-acm
