--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -343,7 +343,7 @@ services:
         'message-router', '3904'
         ]
    prometheus:
-      image: prom/prometheus:v2.32.1
+      image: ${CONTAINER_LOCATION}prom/prometheus:latest
       container_name: prometheus
       hostname: prometheus
       ports:
@@ -351,7 +351,7 @@ services:
       volumes:
        - ./metrics/prometheus.yml:/etc/prometheus/prometheus.yml
    grafana:
-      image: grafana/grafana-oss:8.3.4
+      image: ${CONTAINER_LOCATION}grafana/grafana:latest
       container_name: grafana
       depends_on:
        - prometheus
@@ -362,19 +362,3 @@ services:
        - ./metrics/dashboard.yaml:/etc/grafana/provisioning/dashboards/dashboard.yaml
        - ./metrics/datasource.yaml:/etc/grafana/provisioning/datasources/datasource.yaml
        - ./metrics/dashboards:/var/lib/grafana/dashboards
-   node-exporter:
-      image: prom/node-exporter:latest
-      container_name: node-exporter
-      restart: unless-stopped
-      volumes:
-         - /proc:/host/proc:ro
-         - /sys:/host/sys:ro
-         - /:/rootfs:ro
-      command:
-         - '--path.procfs=/host/proc'
-         - '--path.rootfs=/rootfs'
-         - '--path.sysfs=/host/sys'
-         - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
-      expose:
-         - 9100
-
